<resources>
    <string name="app_name">Etkot Forum</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="login_introduction_text">It\'s finally here, \nthe one and only, \nEtkot Forum!</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>
    <string name="action_logout_text">Logout</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="register_introduction_text">Create your new account! \nIt\'s free and \nyou won\'t miss out on latest posts!</string>
    <string name="action_account_settings_text">Account Settings</string>
    <string name="sort_posts_text">Sort Posts</string>
    <string name="refresh_text">Refresh</string>
    <string name="confirm_button_text">Confirm</string>
    <string name="username_edit_text">Username</string>
    <string name="create_post_textbox_hint">Add Description ...</string>
    <string name="create_post_button">Post</string>
    <string name="anonymously_check_box_text">Anonymous</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="like_count_text">"Likes: "</string>
    <string name="comment_edit_text_hint">Insert comment here...</string>
    <string name="comment_count">"Comments: "</string>
    <string name="delete_button_text">Delete</string>
    <string name="comment_text_pretext">Comment</string>
    <string name="comment_time_text">Date</string>
    <string name="post_date_text">Date</string>
    <string name="post_description_text">Description</string>
</resources>