<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/commentUserCircleImageView"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/commentUsernameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:singleLine="true"
        android:text="@string/username_edit_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/commentUserCircleImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/commentDescriptionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:text="@string/comment_text_pretext"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/commentUserCircleImageView"
        app:layout_constraintTop_toBottomOf="@+id/commentUsernameTextView" />

    <TextView
        android:id="@+id/commentDateTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/comment_time_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/commentUserCircleImageView"
        app:layout_constraintTop_toBottomOf="@+id/commentDescriptionTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>